aligned input and fixed the image url

--- a/style.css
+++ b/style.css
@@ -21,32 +21,31 @@ button{
      font-size:12px;
      background-color:transparent;
      color:black;
-     border: 2px solid black;
+     border: 1px solid black;
      border-radius:10px;
      text-align: center;   
      cursor:pointer; 
      padding: 10px 15px;
-     margin: 10px 5px;
+     margin: 5px ;
+     width:40%;
     
 
 }
  #btnCreate{
-
     font-size:20px;
     border-radius:8px;
-    padding: 10px 15px;
-    margin: 10px 5px;
-
+    padding: 10px;
+    margin: 5px;
  }
 
 
 input[type=text] {
 
-    width: 30%;
+    width: 40%;
     padding: 15px 22px;
     margin: 10px 5px;
     box-sizing: border-box;  
-    border: 3px solid black;
+    border: 1px solid black;
     border-radius: 8px;  
     background:transparent;
     font-size: 15px
@@ -94,3 +93,7 @@ h2{
 
 
 
+.inputArea{
+    width:400px;
+    margin: auto; 
+}
